# RUST_5gC

./: .gitignore  Cargo.toml  README.md
assets/: style.css
src/: handlers.rs  main.rs  model_manager.rs
templates/: base.html  chat.html  info.html
